--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ data/sunrgbd/OFFICIAL_SUNRGBD/
 *.obj
 *.ply
 outputs/
+demo/exps
 
 # Waymo evaluation
 mmdet3d/evaluation/functional/waymo_utils/compute_detection_metrics_main
